# plc-project

./: Grammar.y  Graph.hs  Kruskal.hs  Main.hs  Prim.hs  Project-Presentation.pptx  README.md  Tokens.x  final-submission.docx  gengraph.hs  progress-report.txt  simgc.cabal
Sample_Output/: kruskal-0.gv  kruskal-0.txt  kruskal-1.txt  kruskal-10.gv  kruskal-10.txt  kruskal-2.gv  kruskal-2.txt  kruskal-3.gv  kruskal-3.txt  kruskal-4.gv  kruskal-4.txt  kruskal-5.gv  kruskal-5.txt  kruskal-6.gv  kruskal-6.txt  kruskal-7.gv  kruskal-7.txt  kruskal-8.gv  kruskal-8.txt  kruskal-9.gv  kruskal-9.txt  prim-1.gv  prim-10.gv  prim-10.txt  prim-2.gv  prim-2.txt  prim-3.gv  prim-3.txt  prim-4.gv  prim-4.txt  prim-5.gv  prim-5.txt  prim-6.gv  prim-6.txt  prim-7.gv  prim-7.txt  prim-8.gv  prim-8.txt  prim-9.gv  prim-9.txt
