name:                simgc
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
--license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable simgc
  build-tools:         alex,happy
  main-is:             Main.hs
  other-modules:       Tokens,Grammar,Graph
  -- other-extensions:    
  build-depends:       base >=4.8,
                       bytestring-trie,
                       bytestring,
                       mtl,
                       array

  -- hs-source-dirs:      
  default-language:    Haskell2010